redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-ux
  namespace: authtest
  labels:
    app: redis-ux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-ux
  template:
    metadata:
      labels:
        app: redis-ux
    spec:
      containers:
        - name: redis-ux
          image: redis-ux:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.2"
