redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-ux
  namespace: authtest
  labels:
    app: redis-ux
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: redis-ux
  type: NodePort
